# nonagon

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.api  Dockerfile.bot  LICENSE  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md
backend/: README.md  pyproject.toml
backend/api/: Dockerfile
backend/api/nonagon_api/: deps.py  main.py  mappers.py  schemas.py
backend/api/nonagon_api/auth/: __init__.py  deps.py  jwt.py  models.py  router.py
backend/api/nonagon_api/graphql/: __init__.py  converters.py  resolvers.py  schema.py  types.py
backend/api/nonagon_api/routers/: characters.py  demo.py  quests.py  summaries.py  users.py
backend/bot/: Dockerfile  LEGACY.md
backend/bot/nonagon_bot/: config.py  database.py  main.py
backend/bot/nonagon_bot/character/: __init__.py  sessions.py  utils.py
backend/bot/nonagon_bot/cogs/: AdminCommandsCog.py  CharacterCommandsCog.py  DMCommandsCog.py  ExtensionManagerCog.py  GuildCommandsCog.py  HelpCommandsCog.py  ListnerCog.py  LookupCommandsCog.py  QuestCommandsCog.py  SetupCommandsCog.py  StatsCommandsCog.py  SummaryCommandsCog.py  _staff_utils.py
backend/bot/nonagon_bot/commands/: __init__.py  diagnostics.py
backend/bot/nonagon_bot/core/domain/models/: CharacterModel.py  EntityIDModel.py  QuestModel.py  SummaryModel.py  UserModel.py
backend/bot/nonagon_bot/core/domain/usecase/: ports.py
backend/bot/nonagon_bot/core/domain/usecase/unit/: character_unit.py  quest_unit.py  summary_unit.py  user_unit.py
backend/bot/nonagon_bot/core/infra/: lifecycle.py  serialization.py  settings.py
backend/bot/nonagon_bot/core/infra/postgres/: __init__.py  characters_repo.py  database.py  guild_adapter.py  lookup_repo.py  mappers.py  models.py  quests_repo.py  summaries_repo.py  users_repo.py
backend/bot/nonagon_bot/quest/: __init__.py  commands.py  embeds.py  sessions.py  views.py
backend/bot/nonagon_bot/services/: __init__.py  graphql_client.py  guild_settings_store.py  user_registry.py
backend/bot/nonagon_bot/ui/wizards/: __init__.py  common.py
backend/bot/nonagon_bot/utils/: log_stream.py  logging.py  quest_embeds.py
backend/core/nonagon_core/: __init__.py
backend/core/nonagon_core/domain/: id_utils.py
backend/core/nonagon_core/domain/models/: CharacterModel.py  EntityIDModel.py  LookupModel.py  QuestModel.py  SummaryModel.py  UserModel.py
backend/core/nonagon_core/domain/usecase/: ports.py
backend/core/nonagon_core/domain/usecase/unit/: character_unit.py  quest_unit.py  summary_unit.py  user_unit.py
backend/core/nonagon_core/infra/: db.py  lifecycle.py  serialization.py  settings.py
backend/core/nonagon_core/infra/mongo/: characters_repo.py  guild_adapter.py  lookup_repo.py  mappers.py  quests_repo.py  summaries_repo.py  users_repo.py
backend/core/nonagon_core/infra/postgres/: __init__.py  characters_repo.py  database.py  lookup_repo.py  mappers.py  quests_repo.py  summaries_repo.py  users_repo.py
backend/scripts/: seed_demo.py
docs/: API.md  architecture.md  bot-smoketest.md  discord.md  index.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.jsx  index.html  main.jsx
frontend/src/api/: client.ts  graphql.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: BackendStatusBanner.jsx  CharacterCard.jsx  EmptyState.jsx  Footer.jsx  Header.jsx  Layout.jsx  Loading.jsx  LookupCard.jsx  QuestCard.jsx  SummaryCard.jsx  UserCard.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/contexts/: BackendContext.jsx
frontend/src/data/: dummy.js
frontend/src/pages/: CharacterDetailPage.jsx  CharactersPage.jsx  GuildDashboard.jsx  Home.jsx  LoginPage.jsx  QuestDetailPage.jsx  QuestsPage.jsx  StatsPage.jsx  SummariesPage.jsx  SummaryDetailPage.jsx
frontend/src/styles/: index.css
scripts/: dev_setup.py  generate-types.sh  validate-schemas.sh
scripts/migrations/archive/: backfill_guild_id.py
shared/schemas/: character.schema.json  common.schema.json  enums.schema.json  quest.schema.json  summary.schema.json  user.schema.json
src/: Schema.md
src/api/: app.py
src/api/routes/: custom_commands_route.py  guild_route.py  level_up_route.py  reaction_roles_route.py  stat_channel_route.py  tickets_route.py  timed_messages_route.py  welcome_messages_route.py
src/app/bot/: main.py
src/app/bot/character/: sessions.py  utils.py
src/app/bot/cogs/: manifest.py
src/app/bot/cogs/admin/: diagnostics.py  roles.py
src/app/bot/cogs/character/: cog.py
src/app/bot/cogs/quests/: cog.py  (+4 more)
src/app/bot/core/: cache.py
src/app/bot/utils/: quest_embeds.py
src/app/domain/models/: QuestModel.py
src/app/infra/: settings.py
src/bot/: bot.py
src/bot/cogs/: custom_commands_cog.py  events_cog.py  level_up_cog.py  moderation_cog.py  music_cog.py  reaction_roles_cog.py  stat_channel_cog.py  tickets_cog.py  timed_messages_cog.py
src/bot/helpers/: cog_base_class.py
src/dataclasses/: base_dataclass.py  custom_commands_dataclass.py  guild_data_dataclass.py  level_up_dataclass.py  reaction_roles_dataclass.py  stat_channel_dataclass.py  ticket_dataclass.py  timed_messages_dataclass.py  welcome_messages_dataclass.py
test/: test.py
tests/bot/: test_lookup_cog_utils.py  test_nudge_logging.py  test_quest_embeds.py
tests/domain/: conftest.py
tests/domain/models/: test_character_model.py  test_entity_id_model.py  test_lookup_model.py  test_quest_model.py  test_summary_model.py  test_user_model.py
tests/domain/usecases/: test_user_unit_async.py
(+4 files in other folders)
