[project]
name = "nonagon-workspace"
version = "0.1.0"
description = "Nonagon monorepo workspace - Discord quest management system"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "httpx>=0.27",
    "requests>=2.32",
    "ruff>=0.1",
    "pre-commit>=3.7",
    "datamodel-code-generator>=0.25",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Pytest configuration
[tool.pytest.ini_options]
pythonpath = ["backend/core", "backend/api", "backend/bot"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Ruff linter configuration
[tool.ruff]
src = ["backend/core", "backend/api", "backend/bot"]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["nonagon_core", "nonagon_api", "nonagon_bot"]

# Coverage configuration
[tool.coverage.run]
source = ["backend/core", "backend/api", "backend/bot"]
branch = true
omit = ["*/generated/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
