[project]
name = "nonagon-workspace"
version = "0.1.0"
description = "Nonagon monorepo workspace - Discord quest management system"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # Core
    "python-dotenv>=1.0",
    # Database - PostgreSQL/Supabase with SQLAlchemy
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    # API - FastAPI + Strawberry GraphQL
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "strawberry-graphql[fastapi]>=0.220",
    # Discord Bot
    "discord.py>=2.3",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "httpx>=0.27",
    "requests>=2.32",
    "ruff>=0.1",
    "datamodel-code-generator>=0.25",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Pytest configuration
[tool.pytest.ini_options]
pythonpath = ["backend/api", "backend/bot"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Ruff linter configuration
[tool.ruff]
src = ["backend/api", "backend/bot"]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["nonagon_bot", "nonagon_api"]

# Coverage configuration
[tool.coverage.run]
source = ["backend/api", "backend/bot"]
branch = true
omit = ["*/generated/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
