[tool.poetry]
name = "nonagon-workspace"
version = "0.1.0"
description = "Nonagon monorepo workspace - Discord quest management system"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
python-dotenv = ">=1.0"
sqlalchemy = {version = ">=2.0", extras = ["asyncio"]}
asyncpg = ">=0.29"
psycopg2-binary = ">=2.9"
fastapi = ">=0.109"
uvicorn = {version = ">=0.27", extras = ["standard"]}
strawberry-graphql = {version = ">=0.220", extras = ["fastapi"]}
"discord.py" = ">=2.3"
aiohttp = ">=3.9"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
pytest-cov = ">=4.0"
httpx = ">=0.27"
requests = ">=2.32"
ruff = ">=0.1"
datamodel-code-generator = ">=0.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Pytest configuration
[tool.pytest.ini_options]
pythonpath = ["backend/api", "backend/bot"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Ruff linter configuration
[tool.ruff]
src = ["backend/api", "backend/bot"]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["nonagon_bot", "nonagon_api"]

# Coverage configuration
[tool.coverage.run]
source = ["backend/api", "backend/bot"]
branch = true
omit = ["*/generated/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
